package eu.telecomnancy.lab2e2455u.view;

import eu.telecomnancy.lab2e2455u.Main;
import eu.telecomnancy.lab2e2455u.model.Carnet;

public class CarnetDeVoyageView {
    protected final Main main;

    protected Carnet carnet;

    public CarnetDeVoyageView(Main main, Carnet carnet) {
        this.main = main;
        this.carnet = carnet;
    }
}
