package eu.telecomnancy.lab2e2455u.view;

import eu.telecomnancy.lab2e2455u.Main;
import eu.telecomnancy.lab2e2455u.model.Carnet;
import eu.telecomnancy.lab2e2455u.model.CarnetEntry;

public class EntryScreen extends EntryScreenView {


    public EntryScreen(Main main, Carnet carnet, CarnetEntry entry, CarnetEntry tempEntry) {
        super(main, carnet, entry, tempEntry);
    }
}
